DataFrame,PlottingGL: requested changes

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -86,6 +86,9 @@
 </head>
 <body >
 <h1>Latest Changes</h1>
+<h2>2020-06-30 DataFrame</h2>
+<p>Moved DataFrame utils files to <code>dataframe/util/dataframeutil.h</code> (previously <code>dataframe/datastructures/dataframeutil.h</code>). Renamed namespace from <code>dataframeutil</code> to <code>dataframe</code>.</p>
+<p>Added utility functions for joining two DataFrames: <code>appendRows()</code>, <code>appendColumns()</code>, <code>innerJoin()</code>.</p>
 <h2>2020-06-26 Vcpkg support</h2>
 <p>We now support using <a href="https://github.com/microsoft/vcpkg">vcpkg</a> for handling external dependencies. The following packages from vcpkg can be used <code>assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest hdf5 libjpeg-turbo libpng minizip nlohmann-json openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib</code>.</p>
 <p>To install vcpkg and the dependencies in a directory of your choice (outside of inviwo) do: </p>
