Webbrowser: Webbrowser: Regression test update

--- a/modules/webbrowser/tests/regression/web-property-sync/web_property_sync.html
+++ b/modules/webbrowser/tests/regression/web-property-sync/web_property_sync.html
@@ -99,6 +99,7 @@ inviwo.getProperty("EntryExitPoints.camera.lookFrom", function(prop) {
     console.log(args);
 });
 
+inviwo.setProperty("LineRenderer.lineSettings.lineWidth", {value: Number(2)});
 </script>
 </body>
 </html>
