--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,8 @@
 </style>
 </head>
 <body>
+<h2>2021-04-28 Column &amp; Row Layout</h2>
+<p>Added two processors for interactive layouting with splitters using the mouse or touch events: <code>Column Layout</code> and <code>Row Layout</code>. <code>Column Layout</code> renders all connected image ports side-by-side whereas <code>Row Layout</code> renders them on top of each other. The interaction handles of the splitters are rendered using a <code>SplitterRenderer</code> which also handles the interactions.</p>
 <h2>2021-04-19 Font changes</h2>
 <ul>
 <li>namespace in <code>fontutils.h</code> changed to <code>font</code> (previously <code>util</code>) and added a function to query the default type faces (<code>std::string font::getFont(font::FontType type, font::FullPath path)</code>)</li>
