--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,9 @@
 </style>
 </head>
 <body>
+<h2>2021-09-27</h2>
+<p>Fixed some naming inconsistencies regarding texture coordinate vertex attributes and buffers. Renamed <code>BufferType::TexcoordAttrib</code> to <code>BufferType::TexCoordAttrib</code> (<code>geometrytypes.h</code>) and <code>buffertraits::TexcoordBuffer</code> to <code>buffertraits::TexCoordBuffer</code> (<code>typedmesh.h</code>). The buffer name of <code>TexCoordAttrib</code> now maps to <code>TexCoord</code> (previously <code>Texture</code>), which is relevant when using the <code>MeshShaderCache</code>.</p>
+<p>In case you use the <code>MeshShaderCache</code> in connection with <code>TexCoordAttrib</code> you may need to adjust your shader. If the attribute is available, <code>HAS_TEXCOORD</code> is defined and <code>in_TexCoord</code> holds the value (previously <code>HAS_TEXTURE/in_Texture</code>).</p>
 <h2>2021-08-31</h2>
 <p>Added support for image in the changelog. Add images in the <code>resources/changelog</code> folder<br>
 and enter then in to the resource file <code>resources/changelog.qrc</code>. The prefix and alias is<br>
