Meta: changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,10 @@
 </style>
 </head>
 <body>
+<h2>2021-10-29 Internal Processor Links</h2>
+<p>It is not possible to link different properties internally with in a processor. One can example link the style of x, y, and z Axis Property.<br>
+The internal links are accessible in the processor context menu.<br>
+<a target="_blank" rel="noopener noreferrer" href="resources/changelog/internal-links.png"><img src="resources/changelog/internal-links.png" alt="Internal Links" style="max-width: 100%;"></a></p>
 <h2>2021-10-15 Updated Brushing &amp; Linking</h2>
 <p><a target="_blank" rel="noopener noreferrer" href="resources/changelog/brushing.jpg"><img src="resources/changelog/brushing.jpg" alt="Brushing &amp; Linking" style="max-width: 100%;"></a><br>
 Brushing &amp; Linking (B&amp;L) was completely reworked. Now the B&amp;L inports and outports have their own B&amp;L managers. Brushing events were deprecated and replaced with brushing actions in the B&amp;L manager. The manager supports brushing actions for <em>filtering</em>, <em>selecting</em>, and <em>highlighting</em>.</p>
