Meta: changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <h2>2021-10-29 Internal Processor Links</h2>
-<p>It is not possible to link different properties internally with in a processor. One can example link the style of x, y, and z Axis Property.<br>
+<p>It is now possible to link different properties internally with in a processor. One can for example link the style of x, y, and z Axis Property.<br>
 The internal links are accessible in the processor context menu.<br>
 <a target="_blank" rel="noopener noreferrer" href="resources/changelog/internal-links.png"><img src="resources/changelog/internal-links.png" alt="Internal Links" style="max-width: 100%;"></a></p>
 <h2>2021-10-15 Updated Brushing &amp; Linking</h2>
