Meta: changelog update

--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,10 @@
 </style>
 </head>
 <body>
+<h2>2021-11-15 Custom ranges for DataFrame columns</h2>
+<p>Each DataFrame column has now an optional data range that can be used for normalization, plotting, and similar things. Use the convenience function <code>columnutil::getRange(const Column&amp;)</code> to get the custom range, if set, or the buffer min/max values.</p>
+<h2>2021-11-08 Updated table view for DataFrame</h2>
+<p>The tabular view of the <code>DataFrame Table</code> processor was updated: support for sorting columns, column tool tips (data format and column range), and optionally hiding filtered rows. In order to undo any column sorting, left-click into the upper left corner of the table.</p>
 <h2>2021-10-29 Internal Processor Links</h2>
 <p>It is now possible to link different properties internally with in a processor. One can for example link the style of x, y, and z Axis Property.<br>
 The internal links are accessible in the processor context menu.<br>
