Webbrowser: Set default font for regression tests

--- a/modules/webbrowser/tests/regression/web-property-sync/web_property_sync.html
+++ b/modules/webbrowser/tests/regression/web-property-sync/web_property_sync.html
@@ -13,6 +13,9 @@ var inviwo = new InviwoAPI();
 select {
 	background-color: white;
 }
+body {
+  font-family: Times, sans-serif;
+}
 </style>
 </head>
 <body>
