--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -26,6 +26,9 @@
 </style>
 </head>
 <body>
+<h2>2022-02-01 Icon Grid View</h2>
+<p>The welcome widget now has an icon grid view with previews of the first canvas in each network.<br>
+The workspace and processor search fields gained new features. One can for example search for all networks with a <code>Volume Raycaster</code> processor that was create by <code>Martin</code> like this: <code>processors:\"Volume Raycaster\" author:Martin"</code>. The tooltip for each search field has more details.</p>
 <h2>2021-12-09 DataFrame Column Units</h2>
 <p>The <code>DataFrame</code> <code>Column</code> now has a <code>unit</code> member and many processors (<code>PCP</code>, <code>ScatterPlot</code>, <code>DataFrameTable</code>), operating on DataFrames will now also display the column units if available. The <code>ColumnMetaDataProperty</code> used in the <code>CSVSource</code> processor got support for specifying units.</p>
 <h2>2021-12-09 Volume Units</h2>
