Update C++ API Docs

--- a/cpp-api/classinviwo_1_1InviwoModule.html
+++ b/cpp-api/classinviwo_1_1InviwoModule.html
@@ -112,29 +112,30 @@ $(document).ready(function(){initNavTree('classinviwo_1_1InviwoModule.html','');
 <area href="classinviwo_1_1BrushingAndLinkingModule.html" alt="inviwo::BrushingAndLinkingModule" shape="rect" coords="259,336,508,360"/>
 <area href="classinviwo_1_1CImgModule.html" alt="inviwo::CImgModule" shape="rect" coords="259,392,508,416"/>
 <area href="classinviwo_1_1DataFrameModule.html" alt="inviwo::DataFrameModule" shape="rect" coords="259,448,508,472"/>
-<area href="classinviwo_1_1DataFrameQtModule.html" alt="inviwo::DataFrameQtModule" shape="rect" coords="259,504,508,528"/>
-<area href="classinviwo_1_1EigenUtilsModule.html" alt="inviwo::EigenUtilsModule" shape="rect" coords="259,560,508,584"/>
-<area href="classinviwo_1_1FontRenderingModule.html" alt="inviwo::FontRenderingModule" shape="rect" coords="259,616,508,640"/>
-<area href="classinviwo_1_1GLFWModule.html" alt="inviwo::GLFWModule" shape="rect" coords="259,672,508,696"/>
-<area href="classinviwo_1_1HDF5Module.html" alt="inviwo::HDF5Module" shape="rect" coords="259,728,508,752"/>
-<area href="classinviwo_1_1InviwoCore.html" title="Module which registers all module related functionality available in the core." alt="inviwo::InviwoCore" shape="rect" coords="259,784,508,808"/>
-<area href="classinviwo_1_1JSONModule.html" alt="inviwo::JSONModule" shape="rect" coords="259,840,508,864"/>
-<area href="classinviwo_1_1MeshRenderingGLModule.html" alt="inviwo::MeshRenderingGLModule" shape="rect" coords="259,896,508,920"/>
-<area href="classinviwo_1_1NiftiModule.html" alt="inviwo::NiftiModule" shape="rect" coords="259,952,508,976"/>
-<area href="classinviwo_1_1OpenGLModule.html" alt="inviwo::OpenGLModule" shape="rect" coords="259,1008,508,1032"/>
-<area href="classinviwo_1_1OpenGLQtModule.html" alt="inviwo::OpenGLQtModule" shape="rect" coords="259,1064,508,1088"/>
-<area href="classinviwo_1_1PVMModule.html" alt="inviwo::PVMModule" shape="rect" coords="259,1120,508,1144"/>
-<area href="classinviwo_1_1PlottingGLModule.html" alt="inviwo::PlottingGLModule" shape="rect" coords="259,1176,508,1200"/>
-<area href="classinviwo_1_1PlottingModule.html" alt="inviwo::PlottingModule" shape="rect" coords="259,1232,508,1256"/>
-<area href="classinviwo_1_1PostProcessingModule.html" alt="inviwo::PostProcessingModule" shape="rect" coords="259,1288,508,1312"/>
-<area href="classinviwo_1_1Python3Module.html" alt="inviwo::Python3Module" shape="rect" coords="259,1344,508,1368"/>
-<area href="classinviwo_1_1Python3QtModule.html" alt="inviwo::Python3QtModule" shape="rect" coords="259,1400,508,1424"/>
-<area href="classinviwo_1_1QtWidgetsModule.html" alt="inviwo::QtWidgetsModule" shape="rect" coords="259,1456,508,1480"/>
-<area href="classinviwo_1_1UserInterfaceGLModule.html" alt="inviwo::UserInterfaceGLModule" shape="rect" coords="259,1512,508,1536"/>
-<area href="classinviwo_1_1VectorFieldVisualizationGLModule.html" alt="inviwo::VectorFieldVisualizationGLModule" shape="rect" coords="259,1568,508,1592"/>
-<area href="classinviwo_1_1VectorFieldVisualizationModule.html" alt="inviwo::VectorFieldVisualizationModule" shape="rect" coords="259,1624,508,1648"/>
-<area href="classinviwo_1_1VolumeModule.html" alt="inviwo::VolumeModule" shape="rect" coords="259,1680,508,1704"/>
-<area href="classinviwo_1_1pngModule.html" alt="inviwo::pngModule" shape="rect" coords="259,1736,508,1760"/>
+<area href="classinviwo_1_1DataFramePythonModule.html" alt="inviwo::DataFramePythonModule" shape="rect" coords="259,504,508,528"/>
+<area href="classinviwo_1_1DataFrameQtModule.html" alt="inviwo::DataFrameQtModule" shape="rect" coords="259,560,508,584"/>
+<area href="classinviwo_1_1EigenUtilsModule.html" alt="inviwo::EigenUtilsModule" shape="rect" coords="259,616,508,640"/>
+<area href="classinviwo_1_1FontRenderingModule.html" alt="inviwo::FontRenderingModule" shape="rect" coords="259,672,508,696"/>
+<area href="classinviwo_1_1GLFWModule.html" alt="inviwo::GLFWModule" shape="rect" coords="259,728,508,752"/>
+<area href="classinviwo_1_1HDF5Module.html" alt="inviwo::HDF5Module" shape="rect" coords="259,784,508,808"/>
+<area href="classinviwo_1_1InviwoCore.html" title="Module which registers all module related functionality available in the core." alt="inviwo::InviwoCore" shape="rect" coords="259,840,508,864"/>
+<area href="classinviwo_1_1JSONModule.html" alt="inviwo::JSONModule" shape="rect" coords="259,896,508,920"/>
+<area href="classinviwo_1_1MeshRenderingGLModule.html" alt="inviwo::MeshRenderingGLModule" shape="rect" coords="259,952,508,976"/>
+<area href="classinviwo_1_1NiftiModule.html" alt="inviwo::NiftiModule" shape="rect" coords="259,1008,508,1032"/>
+<area href="classinviwo_1_1OpenGLModule.html" alt="inviwo::OpenGLModule" shape="rect" coords="259,1064,508,1088"/>
+<area href="classinviwo_1_1OpenGLQtModule.html" alt="inviwo::OpenGLQtModule" shape="rect" coords="259,1120,508,1144"/>
+<area href="classinviwo_1_1PVMModule.html" alt="inviwo::PVMModule" shape="rect" coords="259,1176,508,1200"/>
+<area href="classinviwo_1_1PlottingGLModule.html" alt="inviwo::PlottingGLModule" shape="rect" coords="259,1232,508,1256"/>
+<area href="classinviwo_1_1PlottingModule.html" alt="inviwo::PlottingModule" shape="rect" coords="259,1288,508,1312"/>
+<area href="classinviwo_1_1PostProcessingModule.html" alt="inviwo::PostProcessingModule" shape="rect" coords="259,1344,508,1368"/>
+<area href="classinviwo_1_1Python3Module.html" alt="inviwo::Python3Module" shape="rect" coords="259,1400,508,1424"/>
+<area href="classinviwo_1_1Python3QtModule.html" alt="inviwo::Python3QtModule" shape="rect" coords="259,1456,508,1480"/>
+<area href="classinviwo_1_1QtWidgetsModule.html" alt="inviwo::QtWidgetsModule" shape="rect" coords="259,1512,508,1536"/>
+<area href="classinviwo_1_1UserInterfaceGLModule.html" alt="inviwo::UserInterfaceGLModule" shape="rect" coords="259,1568,508,1592"/>
+<area href="classinviwo_1_1VectorFieldVisualizationGLModule.html" alt="inviwo::VectorFieldVisualizationGLModule" shape="rect" coords="259,1624,508,1648"/>
+<area href="classinviwo_1_1VectorFieldVisualizationModule.html" alt="inviwo::VectorFieldVisualizationModule" shape="rect" coords="259,1680,508,1704"/>
+<area href="classinviwo_1_1VolumeModule.html" alt="inviwo::VolumeModule" shape="rect" coords="259,1736,508,1760"/>
+<area href="classinviwo_1_1pngModule.html" alt="inviwo::pngModule" shape="rect" coords="259,1792,508,1816"/>
   </map>
 </div></div>
 <table class="memberdecls">
