Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -13330,10 +13330,76 @@
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.InvalidationLevel.Valid">Valid (inviwopy.properties.InvalidationLevel attribute)</a>
 </li>
-      <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.BoolProperty.value">value (inviwopy.properties.BoolProperty property)</a>
+      <li><a href="_generated/inviwopy.camerautil.html#inviwopy.camerautil.Side.value">value (inviwopy.camerautil.Side property)</a>
 
       <ul>
+        <li><a href="_generated/inviwopy.camerautil.html#inviwopy.camerautil.UpdateLookRanges.value">(inviwopy.camerautil.UpdateLookRanges property)</a>
+</li>
+        <li><a href="_generated/inviwopy.camerautil.html#inviwopy.camerautil.UpdateNearFar.value">(inviwopy.camerautil.UpdateNearFar property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.CodeState.value">(inviwopy.CodeState property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferTarget.value">(inviwopy.data.BufferTarget property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferType.value">(inviwopy.data.BufferType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.BufferUsage.value">(inviwopy.data.BufferUsage property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.ConnectivityType.value">(inviwopy.data.ConnectivityType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.DrawType.value">(inviwopy.data.DrawType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.value">(inviwopy.data.formats.DataFormatId property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.NumericType.value">(inviwopy.data.formats.NumericType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.ImageChannel.value">(inviwopy.data.ImageChannel property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.InterpolationType.value">(inviwopy.data.InterpolationType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.LayerType.value">(inviwopy.data.LayerType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.TFPrimitiveSetType.value">(inviwopy.data.TFPrimitiveSetType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.Wrapping.value">(inviwopy.data.Wrapping property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.value">(inviwopy.IvwKey property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.KeyModifier.value">(inviwopy.KeyModifier property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.KeyState.value">(inviwopy.KeyState property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.LogAudience.value">(inviwopy.LogAudience property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.LogLevel.value">(inviwopy.LogLevel property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.LogVerbosity.value">(inviwopy.LogVerbosity property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.MessageBreakLevel.value">(inviwopy.MessageBreakLevel property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.ModulePath.value">(inviwopy.ModulePath property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.MouseButton.value">(inviwopy.MouseButton property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.MouseState.value">(inviwopy.MouseState property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.PathType.value">(inviwopy.PathType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.PickingHoverState.value">(inviwopy.PickingHoverState property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.PickingPressItem.value">(inviwopy.PickingPressItem property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.PickingPressState.value">(inviwopy.PickingPressState property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.PickingState.value">(inviwopy.PickingState property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.AcceptMode.value">(inviwopy.properties.AcceptMode property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.BoolProperty.value">(inviwopy.properties.BoolProperty property)</a>
+</li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.CameraProperty.value">(inviwopy.properties.CameraProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ConstraintBehavior.value">(inviwopy.properties.ConstraintBehavior property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.DirectoryProperty.value">(inviwopy.properties.DirectoryProperty property)</a>
 </li>
@@ -13368,6 +13434,8 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.DoubleVec4Property.value">(inviwopy.properties.DoubleVec4Property property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.DoubleVec4RefProperty.value">(inviwopy.properties.DoubleVec4RefProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.FileMode.value">(inviwopy.properties.FileMode property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.FileProperty.value">(inviwopy.properties.FileProperty property)</a>
 </li>
@@ -13441,7 +13509,11 @@
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IntVec4RefProperty.value">(inviwopy.properties.IntVec4RefProperty property)</a>
 </li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.InvalidationLevel.value">(inviwopy.properties.InvalidationLevel property)</a>
+</li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IsoValueProperty.value">(inviwopy.properties.IsoValueProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListPropertyUIFlag.value">(inviwopy.properties.ListPropertyUIFlag property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.OptionPropertyDouble.value">(inviwopy.properties.OptionPropertyDouble property)</a>
 </li>
@@ -13462,6 +13534,14 @@
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.StringProperty.value">(inviwopy.properties.StringProperty property)</a>
 </li>
         <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.TransferFunctionProperty.value">(inviwopy.properties.TransferFunctionProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.ProtectedModule.value">(inviwopy.ProtectedModule property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.TouchDeviceType.value">(inviwopy.TouchDeviceType property)</a>
+</li>
+        <li><a href="_generated/inviwopy.html#inviwopy.TouchState.value">(inviwopy.TouchState property)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.ColumnType.value">(ivwdataframe.ColumnType property)</a>
 </li>
       </ul></li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.DataMapper.valueAxis">valueAxis (inviwopy.data.DataMapper property)</a>
@@ -13528,6 +13608,8 @@
 </li>
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.Vec2UINT8">Vec2UINT8 (inviwopy.data.formats.DataFormatId attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.vec2Vector">vec2Vector (class in inviwopy.glm)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.vec2VectorFlatMultiInport">vec2VectorFlatMultiInport (class in inviwopy)</a>
@@ -13568,8 +13650,6 @@
 </li>
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.Vec3FLOAT16">Vec3FLOAT16 (inviwopy.data.formats.DataFormatId attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.Vec3FLOAT32">Vec3FLOAT32 (inviwopy.data.formats.DataFormatId attribute)</a>
 </li>
       <li><a href="_generated/inviwopy.data.formats.html#inviwopy.data.formats.DataFormatId.Vec3FLOAT64">Vec3FLOAT64 (inviwopy.data.formats.DataFormatId attribute)</a>
